[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
solfest_core = { package = "solfest-core", path = "../solfest-core" }
data-pipeline = { path = "../data-pipeline" }
neo4j-graph = { path = "../neo4j-graph" }
rl-agent = { path = "../rl-agent" }
execution-engine = { path = "../execution-engine" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
hyper.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenv.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
