[package]
name = "neo4j-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
solfest_core = { package = "solfest-core", path = "../solfest-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
neo4rs.workspace = true
futures.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
rand = "0.8"
rand_distr = { workspace = true }